RESOLVED FIXED53882
Inset shadow with large offset renders incorrectly
https://bugs.webkit.org/show_bug.cgi?id=53882
Summary Inset shadow with large offset renders incorrectly
Simon Fraser (smfr)
Reported 2011-02-06 11:36:02 PST
Created attachment 81419 [details] Testcase Some inset shadows with large offsets fail to render correctly.
Attachments
Testcase (994 bytes, text/html)
2011-02-06 11:36 PST, Simon Fraser (smfr)
no flags
Patch (8.35 KB, patch)
2011-02-08 09:38 PST, Simon Fraser (smfr)
no flags
Patch (8.10 KB, patch)
2011-02-08 10:47 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2011-02-08 09:38:12 PST
mitz
Comment 2 2011-02-08 10:17:32 PST
Comment on attachment 81653 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=81653&action=review > Source/WebCore/rendering/RenderBoxModelObject.cpp:1595 > + if (shadowOffset.width() < 0) > + bounds.setWidth(bounds.width() - shadowOffset.width()); > + else if (shadowOffset.width()) > + bounds.shiftXEdgeTo(bounds.x() - shadowOffset.width()); > + > + if (shadowOffset.height() < 0) > + bounds.setHeight(bounds.height() - shadowOffset.height()); > + else if (shadowOffset.height()) > + bounds.shiftYEdgeTo(bounds.y() - shadowOffset.height()); I think this sort of thing is more readable as a union of bounds with (bound offset by shadowOffset).
Simon Fraser (smfr)
Comment 3 2011-02-08 10:47:12 PST
Simon Fraser (smfr)
Comment 4 2011-02-08 11:06:36 PST
WebKit Review Bot
Comment 5 2011-02-08 11:34:56 PST
http://trac.webkit.org/changeset/77958 might have broken Qt Linux Release The following tests are not passing: http/tests/websocket/tests/workers/close-in-onmessage-crash.html
Note You need to log in before you can comment on or make changes to this bug.