2011-02-08  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Inset shadow with large offset renders incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=53882

        Fix an issue with inset shadows, when the shadow offset
        was larger than the box size. In this case we'd fail to
        fill the box with the shadow color.

        Test: fast/box-shadow/inset-shadow-large-offset.html

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::areaCastingShadowInHole): Return a rect that covers the area
        which contributes to the inset shadow.

        (WebCore::RenderBoxModelObject::paintBoxShadow): Use areaCastingShadowInHole()
        to compute the outerRect.

Canonical link: https://commits.webkit.org/68017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77958 268f45cc-cd09-0410-ab3c-d52691b4dbfc